methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:2: error: not found: value False
  var vuBiscuit:Boolean = False
                          ^MethodsReturning:13: error: type mismatch;
 found   : Unit
 required: Boolean
while(continuer){
^